--- a/css/progetto.css
+++ b/css/progetto.css
@@ -85,13 +85,20 @@
 
     .devicepics {
         width: 100%;
-        margin-top: 20px;
+        margin-top: 15px;
     }
 
     .prezzi {
         color: red;
         font-size: 25px;
         font-weight: bolder;
+    }
+    
+    .prezzi_scont {
+        color: black;
+        font-size: 20px;
+        font-weight: bolder;
+        text-decoration: line-through;
     }
 
     .rate {
@@ -213,8 +220,8 @@
     }
 
     .devicepics {
-        width: 80%;
-        margin-top: 20px;
+        width: 100%;
+        margin-top: 15px;
     }
 
     .prezzi {
@@ -223,6 +230,13 @@
         font-weight: bolder;
     }
 
+    .prezzi_scont {
+        color: black;
+        font-size: 20px;
+        font-weight: bolder;
+        text-decoration: line-through;
+    }
+    
     .rate {
         font-size: 15px;
     }
@@ -258,3 +272,34 @@
     }
 }
 
+.colonne {
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 10px;
+}
+
+.catpic {
+    margin-bottom: 15px;
+}
+
+.cattext {
+    font-size: 20px;
+}
+
+.rigarespo {
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+.bannerpic {
+    background-size: 100%;
+}
+
+.siamobanner {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 120px;
+    padding-bottom: 120px;
+    color: white;
+    
+}
