--- a/css/tim/device.css
+++ b/css/tim/device.css
@@ -61,10 +61,13 @@
 
 .device-color {
     border-radius: 10px;
-    border: 2px solid #0078c1;
     height: 15px;
     padding: 15px; 
     width: 15px;
+}
+
+.active-color {
+    border: 2px solid #0078c1;
 }
 
 .tim-cbtext {
