--- a/css/tim/device.css
+++ b/css/tim/device.css
@@ -33,6 +33,38 @@
     border-color: crimson;
 }
 
+.carousel-control {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 15%;
+    font-size: 20px;
+    color: #000000;
+    text-align: center;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+    background-color: rgba(0, 0, 0, 0);
+    filter: alpha(opacity=50);
+    opacity: .5;
+}
+
+.carousel-control:hover,
+.carousel-control:focus {
+  color: #000000;
+  text-decoration: none;
+  filter: alpha(opacity=90);
+  outline: 0;
+  opacity: .5;
+}
+
+.carousel-control.left {
+    background-image: none;
+}
+
+.carousel-control.right {
+    background-image: none;
+}
+
 /*
     Personal Classes
 */
@@ -72,6 +104,7 @@
 
 .tim-cbtext {
     font-size: 1em;
+    padding-left: 0px!important;
 }
 
 .tim-pricetext {
