--- a/css/tim/mobile.css
+++ b/css/tim/mobile.css
@@ -5,9 +5,11 @@
     */
     
     body {
+        height: 100%;
         margin-bottom: 100px;
+        min-width: 320px;
     }
-
+    
     .footer {
         position: absolute;
         bottom: 0;
