--- a/css/tim/innovazione.css
+++ b/css/tim/innovazione.css
@@ -9,7 +9,7 @@
     color: white;
     font-weight: bolder;
     margin-top: 136px;
-    min-width: 140px;
+    width: 160px;
     padding-right: 5px;
     padding-left: 5px;
     text-shadow: 0 0px 0;
