--- a/css/tim/assistenza.css
+++ b/css/tim/assistenza.css
@@ -35,3 +35,9 @@
     color: black;
     font-weight: normal;
 }
+
+.immaginidevices {
+    width: 40%;
+    height: 40%;
+    margin-bottom: 30px;
+}
