--- a/css/tim/assistenza.css
+++ b/css/tim/assistenza.css
@@ -37,11 +37,15 @@
 }
 
 .immaginidevices {
-    width: 40%;
-    height: 40%;
+    width: 80px;
+    height: 80px;
     margin-bottom: 30px;
 }
 
 .nomedevices {
-    font-size: 10px;
+    font-size: 14px;
+}
+
+.deviceassist {
+    height: 160px;
 }
