--- a/css/tim/assistenza.css
+++ b/css/tim/assistenza.css
@@ -49,3 +49,21 @@
 .deviceassist {
     height: 160px;
 }
+
+@media screen and (min-width: 1017px) {
+    .textalign {
+        text-align: right;
+    }
+}
+
+@media screen and (max-width: 1016px) and (min-width: 768px) {
+    .textalign {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .textalign {
+        text-align: left;
+    }
+}
