L'inizio della fine

--- a/css/tim/utility-classes.css
+++ b/css/tim/utility-classes.css
@@ -6,6 +6,19 @@
     position: relative;
 }
 
+.push-bottom {
+    position: absolute;
+    bottom: 0;
+}
+
+.disp-flex {
+    display: flex;
+}
+
+.same-height {
+    flex: 1;
+}
+
 .no-margin {
     margin: 0;
 }
