--- a/css/tim/utility-classes.css
+++ b/css/tim/utility-classes.css
@@ -7,6 +7,7 @@
 }
 
 .push-bottom {
+    margin-top: 10px;
     position: absolute;
     bottom: 0;
 }
@@ -17,6 +18,8 @@
 
 .same-height {
     flex: 1;
+    margin-bottom: 10%;
+    margin-top: 10%;
 }
 
 .no-margin {
