--- a/css/tim/innovazione.css
+++ b/css/tim/innovazione.css
@@ -96,6 +96,11 @@
     padding: 0 0 0 0;
 }
 
+.bordi-item {
+    margin-left: 16.66666667%;
+    margin-right: 16.66666667%;
+}
+
 @media screen and (max-width: 365px) {
     .slider-progetti {
         margin-top: 0px;
