--- a/WEBSITE/css/tim/innovazione.css
+++ b/WEBSITE/css/tim/innovazione.css
@@ -124,7 +124,7 @@
 
 @media screen and (width: 768px) {
     .dimensionecarousel-progetti {
-        height: 450px;
+        height: 575px;
     }
     
     .dimensionecarousel-testimonial {
@@ -136,9 +136,9 @@
     }
 }
 
-@media screen and (max-width: 767px) and (min-width: 581px) {
+@media screen and (max-width: 767px) and (min-width: 725px) {
     .dimensionecarousel-progetti {
-        height: 500px;
+        height: 400px;
     }
     
     .dimensionecarousel-testimonial {
@@ -146,13 +146,97 @@
     }
     
     .dimensionecarousel-innovazione {
-        height: 450px;
+        height: 400px;
     }
 }
 
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 724px) and (min-width: 561px) {
     .dimensionecarousel-progetti {
+        height: 475px;
+    }
+    
+    .dimensionecarousel-testimonial {
+        height: 450px;
+    }
+    
+    .dimensionecarousel-innovazione {
+        height: 400px;
+    }
+}
+
+@media screen and (max-width: 560px) and (min-width: 501px) {
+    .dimensionecarousel-progetti {
+        height: 525px;
+    }
+    
+    .dimensionecarousel-testimonial {
+        height: 450px;
+    }
+    
+    .dimensionecarousel-innovazione {
+        height: 425px;
+    }
+}
+
+@media screen and (max-width: 500px) and (min-width: 461px) {
+    .dimensionecarousel-progetti {
+        height: 550px;
+    }
+    
+    .dimensionecarousel-testimonial {
+        height: 450px;
+    }
+    
+    .dimensionecarousel-innovazione {
+        height: 475px;
+    }
+}
+
+@media screen and (max-width: 460px) and (min-width: 401px) {
+    .dimensionecarousel-progetti {
+        height: 600px;
+    }
+    
+    .dimensionecarousel-testimonial {
+        height: 450px;
+    }
+    
+    .dimensionecarousel-innovazione {
         height: 500px;
+    }
+}
+
+@media screen and (max-width: 400px) and (min-width: 381px) {
+    .dimensionecarousel-progetti {
+        height: 625px;
+    }
+    
+    .dimensionecarousel-testimonial {
+        height: 450px;
+    }
+    
+    .dimensionecarousel-innovazione {
+        height: 550px;
+    }
+}
+
+@media screen and (max-width: 380px) and (min-width: 345px) {
+    .dimensionecarousel-progetti {
+        height: 675px;
+    }
+    
+    .dimensionecarousel-testimonial {
+        height: 450px;
+    }
+    
+    .dimensionecarousel-innovazione {
+        height: 575px;
+    }
+}
+
+@media screen and (max-width: 344px) {
+    .dimensionecarousel-progetti {
+        height: 750px;
     }
     
     .dimensionecarousel-testimonial {
@@ -160,6 +244,6 @@
     }
     
     .dimensionecarousel-innovazione {
-        height: 450px;
+        height: 600px;
     }
 }
