--- a/WEBSITE/css/tim/mobile.css
+++ b/WEBSITE/css/tim/mobile.css
@@ -149,3 +149,173 @@
     }
     
 }
+
+@media screen and (max-width: 365px) {
+    .slider-progetti {
+        margin-top: 0px;
+        padding-top: 0px;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .posizionepic {
+        margin-top: 22%;
+    }
+    
+    .dimensionecarousel-progetti {
+        height: 500px;
+    }
+    
+    .dimensionecarousel-testimonial {
+        height: 500px;
+    }
+    
+    .dimensionecarousel-innovazione {
+        height: 500px;
+    }
+}
+
+@media screen and (width: 768px) {
+    .dimensionecarousel-progetti {
+        height: 575px;
+    }
+    
+    .dimensionecarousel-testimonial {
+        height: 600px;
+    }
+    
+    .dimensionecarousel-innovazione {
+        height: 500px;
+    }
+}
+
+@media screen and (max-width: 767px) and (min-width: 725px) {
+    .dimensionecarousel-progetti {
+        height: 400px;
+    }
+    
+    .dimensionecarousel-testimonial {
+        height: 450px;
+    }
+    
+    .dimensionecarousel-innovazione {
+        height: 400px;
+    }
+}
+
+@media screen and (max-width: 724px) and (min-width: 561px) {
+    .dimensionecarousel-progetti {
+        height: 475px;
+    }
+    
+    .dimensionecarousel-testimonial {
+        height: 450px;
+    }
+    
+    .dimensionecarousel-innovazione {
+        height: 400px;
+    }
+}
+
+@media screen and (max-width: 560px) and (min-width: 501px) {
+    .dimensionecarousel-progetti {
+        height: 525px;
+    }
+    
+    .dimensionecarousel-testimonial {
+        height: 450px;
+    }
+    
+    .dimensionecarousel-innovazione {
+        height: 425px;
+    }
+}
+
+@media screen and (max-width: 500px) and (min-width: 461px) {
+    .dimensionecarousel-progetti {
+        height: 550px;
+    }
+    
+    .dimensionecarousel-testimonial {
+        height: 450px;
+    }
+    
+    .dimensionecarousel-innovazione {
+        height: 475px;
+    }
+}
+
+@media screen and (max-width: 460px) and (min-width: 401px) {
+    .dimensionecarousel-progetti {
+        height: 600px;
+    }
+    
+    .dimensionecarousel-testimonial {
+        height: 450px;
+    }
+    
+    .dimensionecarousel-innovazione {
+        height: 500px;
+    }
+}
+
+@media screen and (max-width: 400px) and (min-width: 381px) {
+    .dimensionecarousel-progetti {
+        height: 625px;
+    }
+    
+    .dimensionecarousel-testimonial {
+        height: 450px;
+    }
+    
+    .dimensionecarousel-innovazione {
+        height: 550px;
+    }
+}
+
+@media screen and (max-width: 380px) and (min-width: 345px) {
+    .dimensionecarousel-progetti {
+        height: 675px;
+    }
+    
+    .dimensionecarousel-testimonial {
+        height: 450px;
+    }
+    
+    .dimensionecarousel-innovazione {
+        height: 575px;
+    }
+}
+
+@media screen and (max-width: 344px) {
+    .dimensionecarousel-progetti {
+        height: 750px;
+    }
+    
+    .dimensionecarousel-testimonial {
+        height: 380px;
+    }
+    
+    .dimensionecarousel-innovazione {
+        height: 600px;
+    }
+}
+
+
+@media screen and (min-width: 1017px) {
+    .textalign {
+        text-align: right;
+    }
+}
+
+@media screen and (max-width: 1016px) and (min-width: 768px) {
+    .textalign {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .textalign {
+        text-align: left;
+    }
+}
